--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "homepage": "git@github.com:David-Ostos/react-shop.git#readme",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "webpack --mode production",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d dist"
+    "build": "webpack --mode production"
   },
   "keywords": [
     "react",
@@ -26,14 +24,11 @@
     "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
-  },
-  "devDependencies": {
+    "react-router-dom": "^6.10.0",
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
-    "css-loader": "^6.7.3",
     "eslint": "^8.37.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -44,12 +39,15 @@
     "gh-pages": "^5.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "sass": "^1.61.0",
-    "sass-loader": "^13.2.2",
-    "style-loader": "^3.3.2",
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.2"
+  },
+  "devDependencies": {
+    "sass": "^1.61.0",
+    "sass-loader": "^13.2.2",
+    "css-loader": "^6.7.3",
+    "mini-css-extract-plugin": "^2.7.5",
+    "style-loader": "^3.3.2"
   }
 }
