--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "homepage": "git@github.com:David-Ostos/react-shop.git#readme",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "webpack --mode production"
-
+    "build": "webpack --mode production",
+    "homepage": "https://david-ostos.github.io/react-shop/",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -b main -d dist"
   },
   "keywords": [
     "react",
