--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,5 @@
 name: Build and Deploy
-on: 
-  push:
-    branches:
-      - main
+on: [push]
 permissions:
   contents: write
 jobs:
@@ -16,7 +13,6 @@ jobs:
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm ci
-          npm i
           npm run build
 
       - name: Deploy 🚀
