--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack --mode production",
-    "homepage": "https://david-ostos.github.io/react-shop/",
+    "homepage": "https://david-ostos.github.io/reactPractico",
     "predeploy":"npm run build",
     "deploy": "gh-pages -b main -d dist"
   },
